# neuronalnetwork

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Database.cpp  Database.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Trainer.cpp  Trainer.h  neuronalnetwork.cpp  neuronalnetworkConfig.h.in  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp  test.cpp.bak
test/testfiles/: child.txt  child_correct.txt  database.txt  packprop_output.txt  parent1.txt  parent2.txt  test1.txt  test1.txt.bak
